# weather

./: .env_EXAMPLE  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  setup.cfg
weather/: __init__.py  api.py  app.py  database.py  models.py  queries.py  utils.py  weather_api.py
weather/alembic/: env.py
weather/alembic/versions/: 33eb26ca2a71_.py  596db65b0254_.py  5ff40f141cbf_.py  820f52814c96_.py  eb55edc78498_.py
weather/static/styles/: styles.css
weather/templates/layouts/: main.html
weather/templates/pages/: history.html  home_page.html  statistic.html  weather.html
